Add finance invoice API
