# ts/src/openapi/src/models/FinanceInvoice404Response.ts
@@ -1,0 +1,69 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kanmon Public V2 API
+ * Kanmon\'s public api. Contains all of the endpoints for both capital providers and platforms
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import type { InvoicePaymentPlanNotFoundException } from './InvoicePaymentPlanNotFoundException';
+import {
+    instanceOfInvoicePaymentPlanNotFoundException,
+    InvoicePaymentPlanNotFoundExceptionFromJSON,
+    InvoicePaymentPlanNotFoundExceptionFromJSONTyped,
+    InvoicePaymentPlanNotFoundExceptionToJSON,
+} from './InvoicePaymentPlanNotFoundException';
+import type { IssuedProductNotFoundException } from './IssuedProductNotFoundException';
+import {
+    instanceOfIssuedProductNotFoundException,
+    IssuedProductNotFoundExceptionFromJSON,
+    IssuedProductNotFoundExceptionFromJSONTyped,
+    IssuedProductNotFoundExceptionToJSON,
+} from './IssuedProductNotFoundException';
+
+/**
+ * @type FinanceInvoice404Response
+ * 
+ * @export
+ */
+export type FinanceInvoice404Response = InvoicePaymentPlanNotFoundException | IssuedProductNotFoundException;
+
+export function FinanceInvoice404ResponseFromJSON(json: any): FinanceInvoice404Response {
+    return FinanceInvoice404ResponseFromJSONTyped(json, false);
+}
+
+export function FinanceInvoice404ResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): FinanceInvoice404Response {
+    if (json == null) {
+        return json;
+    }
+    if (instanceOfInvoicePaymentPlanNotFoundException(json)) {
+        return InvoicePaymentPlanNotFoundExceptionFromJSONTyped(json, true);
+    }
+    if (instanceOfIssuedProductNotFoundException(json)) {
+        return IssuedProductNotFoundExceptionFromJSONTyped(json, true);
+    }
+
+    return {} as any;
+}
+
+export function FinanceInvoice404ResponseToJSON(value?: FinanceInvoice404Response | null): any {
+    if (value == null) {
+        return value;
+    }
+
+    if (instanceOfInvoicePaymentPlanNotFoundException(value)) {
+        return InvoicePaymentPlanNotFoundExceptionToJSON(value as InvoicePaymentPlanNotFoundException);
+    }
+    if (instanceOfIssuedProductNotFoundException(value)) {
+        return IssuedProductNotFoundExceptionToJSON(value as IssuedProductNotFoundException);
+    }
+
+    return {};
+}
+
