# ts/src/openapi/src/models/InsufficientCreditLimitException.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kanmon Public V2 API
+ * Kanmon\'s public api. Contains all of the endpoints for both capital providers and platforms
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface InsufficientCreditLimitException
+ */
+export interface InsufficientCreditLimitException {
+    /**
+     * Safe for programmatic use.
+     * @type {string}
+     * @memberof InsufficientCreditLimitException
+     */
+    errorCode: InsufficientCreditLimitExceptionErrorCodeEnum;
+    /**
+     * The human readable description of the error.
+     * @type {string}
+     * @memberof InsufficientCreditLimitException
+     */
+    message: string;
+    /**
+     * When the error occurred - ISO 8601 format.
+     * @type {string}
+     * @memberof InsufficientCreditLimitException
+     */
+    timestamp: string;
+}
+
+
+/**
+ * @export
+ */
+export const InsufficientCreditLimitExceptionErrorCodeEnum = {
+    InsufficientCreditLimitException: 'InsufficientCreditLimitException'
+} as const;
+export type InsufficientCreditLimitExceptionErrorCodeEnum = typeof InsufficientCreditLimitExceptionErrorCodeEnum[keyof typeof InsufficientCreditLimitExceptionErrorCodeEnum];
+
+
+/**
+ * Check if a given object implements the InsufficientCreditLimitException interface.
+ */
+export function instanceOfInsufficientCreditLimitException(value: object): value is InsufficientCreditLimitException {
+    if (!('errorCode' in value) || value['errorCode'] === undefined) return false;
+    if (!('message' in value) || value['message'] === undefined) return false;
+    if (!('timestamp' in value) || value['timestamp'] === undefined) return false;
+    return true;
+}
+
+export function InsufficientCreditLimitExceptionFromJSON(json: any): InsufficientCreditLimitException {
+    return InsufficientCreditLimitExceptionFromJSONTyped(json, false);
+}
+
+export function InsufficientCreditLimitExceptionFromJSONTyped(json: any, ignoreDiscriminator: boolean): InsufficientCreditLimitException {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'errorCode': json['errorCode'],
+        'message': json['message'],
+        'timestamp': json['timestamp'],
+    };
+}
+
+export function InsufficientCreditLimitExceptionToJSON(value?: InsufficientCreditLimitException | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'errorCode': value['errorCode'],
+        'message': value['message'],
+        'timestamp': value['timestamp'],
+    };
+}
+
