# ts/src/openapi/src/models/InvoicePaymentPlanNotFoundException.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kanmon Public V2 API
+ * Kanmon\'s public api. Contains all of the endpoints for both capital providers and platforms
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface InvoicePaymentPlanNotFoundException
+ */
+export interface InvoicePaymentPlanNotFoundException {
+    /**
+     * Safe for programmatic use.
+     * @type {string}
+     * @memberof InvoicePaymentPlanNotFoundException
+     */
+    errorCode: InvoicePaymentPlanNotFoundExceptionErrorCodeEnum;
+    /**
+     * The human readable description of the error.
+     * @type {string}
+     * @memberof InvoicePaymentPlanNotFoundException
+     */
+    message: string;
+    /**
+     * When the error occurred - ISO 8601 format.
+     * @type {string}
+     * @memberof InvoicePaymentPlanNotFoundException
+     */
+    timestamp: string;
+}
+
+
+/**
+ * @export
+ */
+export const InvoicePaymentPlanNotFoundExceptionErrorCodeEnum = {
+    InvalidInvoicePaymentPlanException: 'InvalidInvoicePaymentPlanException'
+} as const;
+export type InvoicePaymentPlanNotFoundExceptionErrorCodeEnum = typeof InvoicePaymentPlanNotFoundExceptionErrorCodeEnum[keyof typeof InvoicePaymentPlanNotFoundExceptionErrorCodeEnum];
+
+
+/**
+ * Check if a given object implements the InvoicePaymentPlanNotFoundException interface.
+ */
+export function instanceOfInvoicePaymentPlanNotFoundException(value: object): value is InvoicePaymentPlanNotFoundException {
+    if (!('errorCode' in value) || value['errorCode'] === undefined) return false;
+    if (!('message' in value) || value['message'] === undefined) return false;
+    if (!('timestamp' in value) || value['timestamp'] === undefined) return false;
+    return true;
+}
+
+export function InvoicePaymentPlanNotFoundExceptionFromJSON(json: any): InvoicePaymentPlanNotFoundException {
+    return InvoicePaymentPlanNotFoundExceptionFromJSONTyped(json, false);
+}
+
+export function InvoicePaymentPlanNotFoundExceptionFromJSONTyped(json: any, ignoreDiscriminator: boolean): InvoicePaymentPlanNotFoundException {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'errorCode': json['errorCode'],
+        'message': json['message'],
+        'timestamp': json['timestamp'],
+    };
+}
+
+export function InvoicePaymentPlanNotFoundExceptionToJSON(value?: InvoicePaymentPlanNotFoundException | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'errorCode': value['errorCode'],
+        'message': value['message'],
+        'timestamp': value['timestamp'],
+    };
+}
+
