# ts/src/openapi/src/models/IssuedProductStatusNotCurrentException.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kanmon Public V2 API
+ * Kanmon\'s public api. Contains all of the endpoints for both capital providers and platforms
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface IssuedProductStatusNotCurrentException
+ */
+export interface IssuedProductStatusNotCurrentException {
+    /**
+     * Safe for programmatic use.
+     * @type {string}
+     * @memberof IssuedProductStatusNotCurrentException
+     */
+    errorCode: IssuedProductStatusNotCurrentExceptionErrorCodeEnum;
+    /**
+     * The human readable description of the error.
+     * @type {string}
+     * @memberof IssuedProductStatusNotCurrentException
+     */
+    message: string;
+    /**
+     * When the error occurred - ISO 8601 format.
+     * @type {string}
+     * @memberof IssuedProductStatusNotCurrentException
+     */
+    timestamp: string;
+}
+
+
+/**
+ * @export
+ */
+export const IssuedProductStatusNotCurrentExceptionErrorCodeEnum = {
+    IssuedProductStatusNotCurrentException: 'IssuedProductStatusNotCurrentException'
+} as const;
+export type IssuedProductStatusNotCurrentExceptionErrorCodeEnum = typeof IssuedProductStatusNotCurrentExceptionErrorCodeEnum[keyof typeof IssuedProductStatusNotCurrentExceptionErrorCodeEnum];
+
+
+/**
+ * Check if a given object implements the IssuedProductStatusNotCurrentException interface.
+ */
+export function instanceOfIssuedProductStatusNotCurrentException(value: object): value is IssuedProductStatusNotCurrentException {
+    if (!('errorCode' in value) || value['errorCode'] === undefined) return false;
+    if (!('message' in value) || value['message'] === undefined) return false;
+    if (!('timestamp' in value) || value['timestamp'] === undefined) return false;
+    return true;
+}
+
+export function IssuedProductStatusNotCurrentExceptionFromJSON(json: any): IssuedProductStatusNotCurrentException {
+    return IssuedProductStatusNotCurrentExceptionFromJSONTyped(json, false);
+}
+
+export function IssuedProductStatusNotCurrentExceptionFromJSONTyped(json: any, ignoreDiscriminator: boolean): IssuedProductStatusNotCurrentException {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'errorCode': json['errorCode'],
+        'message': json['message'],
+        'timestamp': json['timestamp'],
+    };
+}
+
+export function IssuedProductStatusNotCurrentExceptionToJSON(value?: IssuedProductStatusNotCurrentException | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'errorCode': value['errorCode'],
+        'message': value['message'],
+        'timestamp': value['timestamp'],
+    };
+}
+
